# qp266-backend

./: .dockerignore  .pre-commit-config.yaml  Dockerfile_prod  conftest.py  gunicorn.conf.py  pyproject.toml
apps/auths/: mutations.py  schema.py  tests.py  urls.py  views.py
apps/users/: admin.py  forms.py  models.py  validators.py
apps/users/backends/: admin_user.py
apps/users/migrations/: 0001_initial.py  0002_proxytoken.py
config/: graphql.py  graphql_tool.py  urls.py
config/logging/: logger_handler.py  logging_settings.py
config/settings/: base.py  prod.py  test.py
requirements/: prod.txt
templates/admin/: base_site.html
templates/email/: registration_attempt_email.html  welcome_email.html
